--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-	<h1><img src="ear.png"> Reposi3</h1>
+	<h1><img src="ear(1).png"> Reposi3</h1>
 </div>
 
 <div class="container">
