--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-	<h1><img src="ear(1).png"> Reposi3</h1>
+	<h1><img src="ear(1).png"> Earepo</h1>
 </div>
 
 <div class="container">
@@ -23,9 +23,6 @@
 	</div>
 </div>
 <p></p>
-<div class="container">
-  <h3 id="wells" class="page-header">Featured Packages</h3>
-</div>
 
 </body>
 </html>
